<?xml version="1.0"?>

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_manipulator_pose_server</name>
  <version>0.1.0</version>
  <description>Service package to compute multi-object poses in bin scenes using Isaac Manipulator perception servers, with optional per-scan object selection.</description>
  <maintainer email="pastoriomarco@gmail.com">Marco Pastorio</maintainer>
  <license>Apache-2.0</license>

  <depend>action_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>isaac_manipulator_interfaces</depend>
  <depend>isaac_manipulator_server_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>isaac_manipulator_bringup</exec_depend>
  <exec_depend>isaac_manipulator_servers</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
